--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-nes (96 sloc) 2.88 KB
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,49 +5,51 @@ nes (96 sloc) 2.88 KB
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework1 new</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
     <header>
         <nav>
+            <li><a href="./">WebStudio</a></li>
             <ul>
-                <li><a href="./">WebStudio</a></li>
                 <li><a href="./">Студия</a></li>
                 <li><a href="#">Портфолио</a></li>
                 <li><a href="#">Контакты</a></li>
+                <li>
+                    <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+                </li>
             </ul>
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-            <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
         </nav>
     </header>
     <main>
         <!-- Hero section -->
         <section>
-            <div>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
         </section>
         <!-- Section blok-->
         <section>
-            <div>
-                <h2>Внимание к деталям</h2>
-                <p>
-                    Идейные соображения, а также начало повседневной работы по формированию позиции.
-                </p>
-                <h2>Пунктуальность</h2>
-                <p>
-                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                </p>
-                <h2>Планирование</h2>
-                <p>
-                    Равным образом консультация с широким активом в значительной степени обуславливает.
-                </p>
-                <h2>Современные технологии</h2>
-                <p>
-                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                </p>
-            </div>
+            <h2>Внимание к деталям</h2>
+            <p>
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
+            <h2>Пунктуальность</h2>
+            <p>
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+            <h2>Планирование</h2>
+            <p>
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+            <h2>Современные технологии</h2>
+            <p>
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
         </section>
 
         <!-- Чем мы занимаемось-->
@@ -63,39 +63,42 @@ nes (96 sloc) 2.88 KB
         </section>
         <!-- Наша команда-->
         <section>
-            <div>
-                <h2> Наша команда</h2>
-
-                <img src="./images/ihor.jpg" alt="" width="270" />
+            <h2> Наша команда</h2>
+            <ul>
+                <li><img src="./images/ihor.jpg" alt="" width="270" /></li>
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
-
-                <img src="./images/olha.jpg" alt="olha" width="270" />
+                <li>
+                    <img src="./images/olha.jpg" alt="olha" width="270" /></li>
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
-
-                <img src="./images/kola.jpg" alt="" width="270" />
+                <li>
+                    <img src="./images/kola.jpg" alt="" width="270" /></li>
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
-
-                <img src="./images/mih.jpg" alt="" width="270" />
+                <li>
+                    <img src="./images/mih.jpg" alt="" width="270" /></li>
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
-
-            </div>
+            </ul>
         </section>
 
         <!-- Адрес-->
         <footer>
+            <a href="./"> WebStudio </a> <br>
             <address>
-                <a href="./"> WebStudio </a> <br>
                     <li>
                         <a  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.
                         Киев, пр-т Леси Украинки, 26
                     </a> <br>
                     </li>
-                    <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a><br>
-                    <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                    <li>
+                        <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+                    </li>
+                    <li>
+                     <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                    </li>
+
                 </address>
         </footer>
 
