--- a/index.html
+++ b/index.html
@@ -65,21 +65,25 @@
         <section>
             <h2> Наша команда</h2>
             <ul>
-                <li><img src="./images/ihor.jpg" alt="" width="270" /></li>
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <li><img src="./images/ihor.jpg" alt="" width="270" />
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
                 <li>
-                    <img src="./images/olha.jpg" alt="olha" width="270" /></li>
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                    <img src="./images/olha.jpg" alt="olha" width="270" />
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
                 <li>
-                    <img src="./images/kola.jpg" alt="" width="270" /></li>
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                    <img src="./images/kola.jpg" alt="" width="270" />
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
                 <li>
-                    <img src="./images/mih.jpg" alt="" width="270" /></li>
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                    <img src="./images/mih.jpg" alt="" width="270" />
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
             </ul>
         </section>
 
@@ -87,21 +91,18 @@
         <footer>
             <a href="./"> WebStudio </a> <br>
             <address>
-                    <li>
-                        <a  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.
-                        Киев, пр-т Леси Украинки, 26
-                    </a> <br>
-                    </li>
-                    <li>
-                        <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
-                    </li>
-                    <li>
-                     <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-                    </li>
+             <li>
+                 <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.Киев, пр-т Леси Украинки, 26</a> <br>
+             </li>
+             <li>
+                 <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+             </li>
+             <li>
+                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+             </li>
 
-                </address>
+            </address>
         </footer>
-
     </main>
 </body>
 
