--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <li><a href="./">WebStudio</a></li>
+            <a href="./">WebStudio</a>
             <ul>
                 <li><a href="./">Студия</a></li>
                 <li><a href="#">Портфолио</a></li>
