--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
                 <li><a href="./">Студия</a></li>
                 <li><a href="#">Портфолио</a></li>
                 <li><a href="#">Контакты</a></li>
-                <li>
-                    <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-                </li>
-                <li>
-                    <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
-                </li>
             </ul>
         </nav>
+        <ul>
+            <li>
+                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            </li>
+            <li>
+                <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+            </li>
+        </ul>
     </header>
     <main>
         <!-- Hero section -->
         <section>
-
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
@@ -56,16 +57,17 @@
         <section>
             <div>
                 <h2> Чем мы занимаемся</h2>
-                <img src="./images/img.png" alt="c" width="370" />
-                <img src="./images/img (2).png" alt="" width="370" />
-                <img src="./images/img (1).png" alt="" width="370" />
+                <img src="./images/com.png" alt="c" width="370" />
+                <img src="./images/tel.png" alt="" width="370" />
+                <img src="./images/di.png" alt="" width="370" />
             </div>
         </section>
         <!-- Наша команда-->
         <section>
             <h2> Наша команда</h2>
             <ul>
-                <li><img src="./images/ihor.jpg" alt="" width="270" />
+                <li>
+                    <img src="./images/ihor.jpg" alt="" width="270" />
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
