--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <nav>
             <a href="./">WebStudio</a>
             <ul>
-                <li><a href="./">Студия</a></li>
+                <li><a href="#">Студия</a></li>
                 <li><a href="#">Портфолио</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
         <ul>
             <li>
-                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
             <li>
                 <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
